[CDAP-8423] - Fix Jump button functionality to transition between tracker and hydrator
 - Modifies jump button directive in tracker to say "More Actions"
 - Fixes my-link-button directive for hydrator
 - Removes Jump button from search results view in metadata

--- a/cdap-ui/app/hydrator/hydrator-modal.less
+++ b/cdap-ui/app/hydrator/hydrator-modal.less
@@ -86,8 +86,25 @@
 
       my-link-button {
         padding: 0;
-        margin-top: 12px;
-        margin-right: 10px;
+        border: 0;
+        display: inline;
+        cursor: default;
+        margin: 0;
+        padding-right: 10px;
+
+        .btn.btn-my-link {
+          border-left: 0;
+          padding: 6px;
+          background: gray;
+          display: inline;
+          color: white;
+          border-radius: 4px;
+          border-top-right-radius: 4px;
+          font-size: 12px;
+        }
+        &:active {
+          box-shadow: none;
+        }
       }
       div.btn-group { margin-left: auto; }
       a.btn {
@@ -104,7 +121,6 @@
         width: 60px;
         height: 60px;
         line-height: 60px;
-        &:last-child { margin-right: -1px; }
         &:hover {
           background-color: @cdap-header;
           border: 0;
